--- a/src/styles/utils/_loaders.scss
+++ b/src/styles/utils/_loaders.scss
@@ -31,36 +31,57 @@
   position: fixed;
   z-index: 99;
   transition: all 20ms ease-out;
-  top: 50%;
-  left: 50%;
-  width: 130px;
-  height: 130px;
-  margin: -65px 0 0 -65px;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
   transition: all 300ms ease-out;
-  .bit {
+  .top,
+  .bottom {
+    height: 40%;
+    position: relative;
     z-index: 2;
-    width: 30px;
-    height: 30px;
-    background: $green;
-    border-radius: 100%;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: -15px;
-    margin-top: -15px;
-    animation-name: movingdot;
-    animation-duration: 670ms;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-    + .bit {
-      animation-name: movingdotRev;
-      top: auto;
-      bottom: 0;
-      margin-top: 0;
-      margin-bottom: -15px;
-      background: $white;
+    transition: all 300ms ease-out;
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 32px;
+  }
+  .top {
+    background: #3d3d3d;
+    padding-bottom: 16px;
+    transform: translateY(-100%);
+    .copy {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
+    p {
+      @include mont(12px, 500, $greyType);
+      line-height: 1.3;
+      transition: 200ms all 300ms ease-out;
+      transform: translateX(-100%);
+      opacity: 0;
     }
   }
+  .bottom {
+    height: 60%;
+    background: #000;
+    transform: translateY(100%);
+    .name {
+      font-family: 'Questrial';
+      font-size: 25px;
+      color: #fff;
+      display: block;
+      strong {
+        color: #d42f2f;
+      }
+    }
+  }
+
   &:after {
     display: block;
     width: 100%;
@@ -71,7 +92,7 @@
     top: 0;
     background: #000;
     content: '';
-    opacity: 1;
+    opacity: 0.7;
     transition: all 3200ms ease-out;
   }
 
@@ -81,9 +102,26 @@
   &.visible {
     display: block;
     opacity: 0;
+    .top,
+    .bottom {
+      opacity: 0;
+    }
   }
   &.opaque {
     opacity: 1;
+  }
+  &.nowLoading {
+    .top,
+    .bottom {
+      opacity: 1;
+      transform: translateY(0%) rotate(0deg);
+    }
+    .top {
+      p {
+        opacity: 1;
+        transform: translateX(0%);
+      }
+    }
   }
 }
 
